bk_ida/gccida/c0/record_reg_classes
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:1896:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *modes, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2010:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class pref; // [rsp+150h] [rbp-DD0h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2013:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_0; // [rsp+15Ch] [rbp-DC4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2023:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+194h] [rbp-D8Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2030:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classes[30]; // [rsp+230h] [rbp-CF0h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2040:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *modesa; // [rsp+F08h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2058:12: error: expected identifier or '('
 struct op = opsa[i]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2241:35: error: use of undeclared identifier 'machine_mode'
win = appendIntToFourBytes( op, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op)); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2241:50: error: expected expression
win = appendIntToFourBytes( op, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op)); 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2623:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] == OP_OUT ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2627:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2633:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2637:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] == OP_OUT ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2642:7: error: expected expression
if (  struct reg_pref ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2652:44: error: use of undeclared identifier 'machine_mode'
|| !reg_fits_class_p( op, classes[i], 0, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op))) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2652:59: error: expected expression
|| !reg_fits_class_p( op, classes[i], 0, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op))) ) 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2656:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] != OP_OUT ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2661:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/regclass.c:2721:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] == OP_OUT ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_reg_classes/src/obj/regclass.o] Error 1
